@@ -124,6 +124,9 @@ also recognized when they are compressed with :program:`gzip` or
    |               |           |       | either standard or EXTended format. Module           |
    |               |           |       | :mod:`MDAnalysis.coordinates.CRD`                    |
    +---------------+-----------+-------+------------------------------------------------------+
+   | DESRES [#a]_  | dms       |  r    | DESRES Molecular Structure file format reader. h     |
+   |               |           |       | Module :mod:`MDAnalysis.coordinates.DMS`             |
+   +---------------+-----------+-------+------------------------------------------------------+
 
 .. [#a] This format can also be used to provide basic *topology*
    information (i.e. the list of atoms); it is possible to create a
